<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Movie Catalogue</string>
    <string name="title_movie">Title</string>
    <string name="excerpt_movie">Excerpt</string>
    <string name="rating_movie">4.9</string>
    <string name="my_name">Galih Anggi Satriawan</string>
    <string name="author">Author</string>
    <string name="description">Description</string>
    <string name="dummy_title">Title</string>
    <string name="dummy_content_text">Content</string>
    <string name="popular_on_movies">Popular on Movie Catalogue</string>
    <string name="communication_error">Failed to get data from server</string>
    <string name="error">Error Occured</string>
    <string name="api_key">f46dc5d10e95dbdaa00fb0a4b6bdb83a</string>
    <string name="add_to_wishlist">Add to Wishlist</string>
    <string-array name="movies_id">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="movies_name">
        <item>Aquaman</item>
        <item>Avenger Infinity War</item>
        <item>Glass</item>
        <item>Creed II</item>
        <item>Hunter Killer</item>

        <item>Preman Pensiun</item>
        <item>Robin Hood</item>
        <item>Spiderman</item>
        <item>The Mule</item>
        <item>Venom</item>
    </string-array>
</resources>