<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    tools:context=".ui.DetailMovieActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_banner_poster"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_alignParentEnd="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/poster_venom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_poster"
            android:layout_width="130dp"
            android:layout_height="235dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/poster_venom" />

        <TextView
            android:id="@+id/text_title_movie"
            style="@style/TextContent.Small.White"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/dummy_title"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <TextView
            android:id="@+id/text_rating"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_marginStart="8dp"
            android:fontFamily="casual"
            android:text="4.7"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/text_title_movie" />

        <android.support.v7.widget.AppCompatRatingBar
            android:id="@+id/rb_rating"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:rating="4.7"
            android:text=""
            app:layout_constraintStart_toEndOf="@+id/text_rating"
            app:layout_constraintTop_toBottomOf="@+id/text_title_movie" />

        <TextView
            android:id="@+id/text_production"
            style="@style/TextContent.Small.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="0dp"
            android:layout_marginBottom="0dp"
            android:fontFamily="casual"
            android:text="MNC TV"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/rb_rating" />

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cont_production"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/colorAccent"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/text_production"
            card_view:cardCornerRadius="8dp">

            <TextView
                android:id="@+id/text_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:padding="4dp"
                android:text="12 Juni 2019"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/text_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="0dp"
            android:fontFamily="casual"
            android:padding="4dp"
            android:text="2 Hours 3 Minutes"
            android:textColor="@color/colorAccent"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/cont_production" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="162dp" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="46dp" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="251dp" />

        <TextView
            android:id="@+id/text_sub_content"
            style="@style/TextTitle"
            android:layout_marginStart="8dp"

            android:layout_marginTop="8dp"
            android:lineSpacingMultiplier="1"
            android:text="@string/description"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline3" />

        <TextView

            android:id="@+id/text_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextContent.Small"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/dummy_content_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_sub_content" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorAccent"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_content" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageView"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_centerVertical="true"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:src="@drawable/galih"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <LinearLayout
            android:id="@+id/cont_author_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/circleImageView"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <TextView
                style="@style/TextContent"
                android:layout_centerVertical="true"
                android:text="@string/my_name" />

            <TextView
                style="@style/TextContent.Subtitle"
                android:layout_marginBottom="8dp"
                android:text="@string/author" />
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</ScrollView>