<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="210dp"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"

    card_view:cardCornerRadius="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">
            <ImageView
                android:id="@+id/image_poster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tool:src="@color/colorAccent" />
            <ImageView
                android:id="@+id/image_wishlist_off"
                android:layout_width="20dp"
                android:layout_height="25dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                tool:src="@color/colorPrimaryDark"
                />
            <ImageView
                android:id="@+id/image_wishlist_on"
                android:layout_width="20dp"
                android:layout_height="25dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:visibility="gone"
                tool:src="@color/colorPrimaryDark"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image_rating"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    tool:src="@color/colorPrimary" />

                <TextView
                    android:id="@+id/text_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="4dp"
                    android:fontFamily="casual"
                    android:text="@string/rating_movie"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin">
                <TextView
                    android:id="@+id/text_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_movie"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    />
                <TextView
                    android:id="@+id/text_excerpt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/excerpt_movie"/>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <Button
                    android:id="@+id/button_add_wishlist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="Add to wishlist" />
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>